--- a/DS proj 2021/DS proj 2021.vcxproj.filters
+++ b/DS proj 2021/DS proj 2021.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Product.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Customer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Seller.h">
@@ -31,6 +34,9 @@
     </ClInclude>
     <ClInclude Include="Product.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Customer.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
